--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/react": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
     "antd": "^3.12.3",
     "async": "^2.6.1",
     "axios": "^0.18.0",
@@ -22,25 +27,29 @@
     "file-loader": "^3.0.1",
     "moment": "^2.24.0",
     "react": "^16.7.0",
+    "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.7.0",
     "react-number-format": "^4.0.7",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "read-excel-file": "^4.0.2",
     "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
     "simple-react-validator": "0.0.8",
     "uid": "0.0.2",
     "url-loader": "^1.1.2",
-    "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14",
-    "redux-saga": "^0.16.2"
+    "webpack-dev-server": "^3.1.14"
   },
   "devDependencies": {
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.1"
+    "terser-webpack-plugin": "^1.2.1",
+    "webpack": "^4.40.2"
   }
 }
